RESOLVED FIXED68240
Web Inspector: paint box model colors in Metrics sidebar at all times, do not draw box outlines.
https://bugs.webkit.org/show_bug.cgi?id=68240
Summary Web Inspector: paint box model colors in Metrics sidebar at all times, do not...
Pavel Feldman
Reported 2011-09-16 05:27:01 PDT
1. Today we paint backgrounds in Metrics box model on hover only - should be painted at all times for the reference. 2. Outlining boxes is highlight is wrong since outlines are outside the corresponding box regions. We've seen few reports on that + Firebug does not do borders for that reason.
Attachments
Patch (18.26 KB, patch)
2011-09-16 05:47 PDT, Pavel Feldman
no flags
[Patch] for landing (21.95 KB, patch)
2011-09-21 06:31 PDT, Pavel Feldman
no flags
Pavel Feldman
Comment 1 2011-09-16 05:47:04 PDT
Yury Semikhatsky
Comment 2 2011-09-21 05:21:51 PDT
Comment on attachment 107640 [details] Patch Looks good, but it was more interactive when rectangle under cursor was highlighted in the metrics box on mouse hover. Would be nice to preserve that behavior.
Pavel Feldman
Comment 3 2011-09-21 06:31:35 PDT
Created attachment 108142 [details] [Patch] for landing
Pavel Feldman
Comment 4 2011-09-21 06:32:18 PDT
Note You need to log in before you can comment on or make changes to this bug.