Source/WebCore/inspector/front-end/inspector.js
@@ -368,25 +368,17 @@ var WebInspector = {
     {
         mode = mode || "all";
         var highlightConfig = { showInfo: mode === "all" };
-        if (mode === "all" || mode === "content") {
+        if (mode === "all" || mode === "content")
             highlightConfig.contentColor = WebInspector.Color.PageHighlight.Content.toProtocolRGBA();
-            highlightConfig.contentOutlineColor = WebInspector.Color.PageHighlight.ContentOutline.toProtocolRGBA();
-        }
 
-        if (mode === "all" || mode === "padding") {
+        if (mode === "all" || mode === "padding")
             highlightConfig.paddingColor = WebInspector.Color.PageHighlight.Padding.toProtocolRGBA();
-            highlightConfig.paddingOutlineColor = WebInspector.Color.PageHighlight.PaddingOutline.toProtocolRGBA();
-        }
 
-        if (mode === "all" || mode === "border") {
+        if (mode === "all" || mode === "border")
             highlightConfig.borderColor = WebInspector.Color.PageHighlight.Border.toProtocolRGBA();
-            highlightConfig.borderOutlineColor = WebInspector.Color.PageHighlight.BorderOutline.toProtocolRGBA();
-        }
 
-        if (mode === "all" || mode === "margin") {
+        if (mode === "all" || mode === "margin")
             highlightConfig.marginColor = WebInspector.Color.PageHighlight.Margin.toProtocolRGBA();
-            highlightConfig.marginOutlineColor = WebInspector.Color.PageHighlight.MarginOutline.toProtocolRGBA();
-        }
 
         return highlightConfig;
     },
@@ -397,9 +389,6 @@ var WebInspector = {
             clearTimeout(this._hideDOMNodeHighlightTimeout);
             delete this._hideDOMNodeHighlightTimeout;
         }
-
-        if (this._highlightedDOMNodeId === nodeId)
-            return;
 
         this._highlightedDOMNodeId = nodeId;
         if (nodeId)
